[project]
name = "nondeterminism"
authors = [
    {name = "Antonio E. Porreca"},
    {email = "antonio.porreca@lis-lab.fr"},
]
description = "A Python library for nondeterministic algorithms"
version = "3.0.0-beta"
readme = "README.md"

[project.urls]
homepage = "https://aeporreca.org/nondeterminism"
