[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nondeterminism"
authors = [
    {name = "Antonio E. Porreca"},
    {email = "antonio.porreca@lis-lab.fr"},
    {name = "Greg Hamerly"},
]
description = "A Python library for nondeterministic algorithms"
version = "3.1.1"
readme = "README.md"
license = {text = "LICENSE.md"}
keywords = [
    "python", "python-library", "python3", "agpl", "decorator",
    "nondeterminism","nondeterministic-algorithms"
]
requires-python = ">= 3.8"
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3"
]

[project.urls]
homepage = "https://aeporreca.org/nondeterminism"
repository = "https://github.com/aeporreca/nondeterminism.git"
issues = "https://github.com/aeporreca/nondeterminism/issues"
documentation = "https://aeporreca.org/nondeterminism"
